login and signup finished and tested

--- a/templates/login.html
+++ b/templates/login.html
@@ -82,7 +82,8 @@
     <div class="container-fluid h-custom">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-md-6 col-lg-5 col-xl-5 text-center">
-          <img src="/static/images/legal_icon.png" class="img-fluid" alt="Sample image">
+          <!-- /static/images/legal_icon.png -->
+          <img src="/" class="img-fluid" alt="Sample image">
         </div>
         <div class="col-md-8 col-lg-6 col-xl-4">
           <!-- Display flash messages -->
@@ -95,8 +96,9 @@
           {% endfor %}
           {% endif %}
           {% endwith %}
+
           
-          <form>
+          <form action="/login" method="POST"> 
             <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
               <p class="lead fw-normal mb-0 me-3">Sign in with</p>
               <button type="button" class="btn btn-primary btn-floating mx-1">
@@ -118,17 +120,18 @@
 
             <!-- Email input -->
             <div class="form-outline mb-4">
-              <input type="email" id="form3Example3" class="form-control form-control-lg"
+              <input type="email" id="form3Example3" name="email" class="form-control form-control-lg"
                 placeholder="Enter a valid email address" />
               <label class="form-label" for="form3Example3"> </label>
             </div>
 
             <!-- Password input -->
             <div class="form-outline mb-3">
-              <input type="password" id="form3Example4" class="form-control form-control-lg"
+              <input type="password" id="form3Example4" name="password" class="form-control form-control-lg"
                 placeholder="Enter password" />
               <label class="form-label" for="form3Example4"> </label>
             </div>
+
 
             <div class="d-flex justify-content-between align-items-center">
               <!-- Checkbox -->
@@ -142,8 +145,9 @@
             </div>
 
             <div class="text-center text-lg-start mt-4 pt-2">
-              <button type="button" class="btn btn-primary btn-lg" style="padding-left: 2.5rem; padding-right: 2.5rem;"
-                onclick="location.href='/home';">Login</button>
+              <button type="submit" class="btn btn-primary btn-lg" style="padding-left: 2.5rem; padding-right: 2.5rem;">
+                Login
+              </button>
               <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="/signup"
                   class="link-danger">Register</a></p>
             </div>
@@ -151,8 +155,6 @@
         </div>
       </div>
     </div>
-
-    <!-- copyright from @Bootstrap 5.3.2 -->
 
   </section>
 
