--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up Page</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Awesome for icons -->
-    <link 
-    rel="stylesheet" 
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-  </head>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sign Up Page</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Font Awesome for icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+</head>
+
 <body>
   <section class="vh-100" style="background: #eaf7f8;">
     <div class="container h-100">
@@ -22,90 +22,120 @@
             <span class="text-primary">Bridging Convenience<br> and Law</span>
           </h1>
           <p class="lead text-center" style="text-align: center;">
-            Find your way in the legal world with confidence. First Legal Aid offers instant access to guidance and affordable legal solutions, tailored just for you. Navigate through life's legal challenges effortlessly, knowing you have a trusted ally in your corner. With First Legal Aid, expert advice is always the first step away.
+            Find your way in the legal world with confidence. First Legal Aid offers instant access to guidance and
+            affordable legal solutions, tailored just for you. Navigate through life's legal challenges effortlessly,
+            knowing you have a trusted ally in your corner. With First Legal Aid, expert advice is always the first step
+            away.
           </p>
         </div>
-            
 
-            <!-- Card and Sign Up Form  -->
-            <div class="col-lg-6 mb-5 mb-lg-0">
-              <div class="card" style="width: 440px; height: 560px; left: 90px;">
-                <div class="card-body d-flex align-items-center justify-content-center py-5 px-md-5">
-                  <form>
-                    <!-- 2 column grid layout with text inputs for the first and last names -->
-                    <div class="row">
-                      <div class="col-md-6 mb-4">
-                        <div class="form-outline">
-                          <input type="text" id="form3Example1" class="form-control" placeholder="First Name"/>
-                          <label class="form-label" for="form3Example1"> </label>
-                        </div>
-                      </div>
-                      <div class="col-md-6 mb-4">
-                        <div class="form-outline">
-                          <input type="text" id="form3Example2" class="form-control" placeholder="Last Name"/>
-                          <label class="form-label" for="form3Example2"> </label>
-                        </div>
-                      </div>
+
+        <!-- Card and Sign Up Form  -->
+        <div class="col-lg-6 mb-5 mb-lg-0">
+          <div class="card" style="width: 440px; height: 560px; left: 90px;">
+            <div class="card-body d-flex align-items-center justify-content-center py-5 px-md-5">
+
+              <form action="/signup" method="POST">
+                <!-- 2 column grid layout with text inputs for the first and last names -->
+                <div class="row">
+                  <!-- First Name Input -->
+                  <div class="col-md-6 mb-4">
+                    <div class="form-outline">
+                      <input type="text" name="first_name" id="form3Example1" class="form-control"
+                        placeholder="First Name" />
+                      <label class="form-label" for="form3Example1"> </label>
                     </div>
-    
-                    <!-- Email input -->
-                    <div class="form-outline mb-4">
-                      <input type="email" id="form3Example3" class="form-control" placeholder="Email address" />
-                      <label class="form-label" for="form3Example3"> </label>
+                  </div>
+                  <!-- Last Name Input -->
+                  <div class="col-md-6 mb-4">
+                    <div class="form-outline">
+                      <input type="text" name="last_name" id="form3Example2" class="form-control"
+                        placeholder="Last Name" />
+                      <label class="form-label" for="form3Example2"> </label>
                     </div>
-    
-                    <!-- Password input -->
-                    <div class="form-outline mb-4">
-                      <input type="password" id="form3Example4" class="form-control" placeholder="Password"/>
-                      <label class="form-label" for="form3Example4"> </label>
-                    </div>
-    
-                    <!-- Checkbox -->
-                    <div class="form-check d-flex justify-content-center mb-4">
-                      <input class="form-check-input me-2" type="checkbox" value="" id="form2Example33" checked />
-                      <label class="form-check-label" for="form2Example33">
-                        Subscribe to Smart Query
-                      </label>
-                    </div>
-    
-                    <!-- Submit button -->
-                    
-                    <button type="button" class="btn btn-primary btn-block mb-4" style="width: 340px; height: 36px;" onclick="location.href='/login';">
-                      Sign up
-                    </button>
-                    
-    
-                    <!-- Register buttons -->
-                    <div class="text-center">
-                      <p>or sign up with:</p>
-                      <button type="button" class="btn btn-link btn-floating mx-1">
-                        <i class="fab fa-facebook-f"></i>
-                      </button>
-    
-                      <button type="button" class="btn btn-link btn-floating mx-1">
-                        <i class="fab fa-google"></i>
-                      </button>
-    
-                      <button type="button" class="btn btn-link btn-floating mx-1">
-                        <i class="fab fa-twitter"></i>
-                      </button>
-    
-                      <button type="button" class="btn btn-link btn-floating mx-1">
-                        <i class="fab fa-github"></i>
-                      </button>
-                    </div>
-                  </form>
+                  </div>
                 </div>
-              </div>
+
+                <!-- Email input -->
+                <div class="form-outline mb-4">
+                  <input type="email" name="email" id="form3Example3" class="form-control"
+                    placeholder="Email address" />
+                  <label class="form-label" for="form3Example3"> </label>
+                </div>
+
+                <!-- Password input -->
+                <div class="form-outline mb-4">
+                  <input type="password" name="password" id="form3Example4" class="form-control"
+                    placeholder="Password" />
+                  <label class="form-label" for="form3Example4"> </label>
+                </div>
+
+                <!-- Checkbox -->
+                <div class="form-check d-flex justify-content-center mb-4">
+                  <input class="form-check-input me-2" type="checkbox" value="" id="form2Example33" checked />
+                  <label class="form-check-label" for="form2Example33">
+                    Subscribe to Puberry
+                  </label>
+                </div>
+
+                <!-- Submit button -->
+
+                <button type="submit" class="btn btn-primary btn-block mb-4" style="width: 340px; height: 36px;"
+                  onclick="location.href='/login';">
+                  Sign up
+                </button>
+
+
+                <!-- Register buttons -->
+                <div class="text-center">
+                  <p>or sign up with:</p>
+                  <button type="button" class="btn btn-link btn-floating mx-1">
+                    <i class="fab fa-facebook-f"></i>
+                  </button>
+
+                  <button type="button" class="btn btn-link btn-floating mx-1">
+                    <i class="fab fa-google"></i>
+                  </button>
+
+                  <button type="button" class="btn btn-link btn-floating mx-1">
+                    <i class="fab fa-twitter"></i>
+                  </button>
+
+                  <button type="button" class="btn btn-link btn-floating mx-1">
+                    <i class="fab fa-github"></i>
+                  </button>
+                </div>
+              </form>
             </div>
           </div>
         </div>
       </div>
-      <!-- Jumbotron -->
-    </section>
+    </div>
+    </div>
+    <!-- Jumbotron -->
+    <!-- alert when registering with existing email -->
+    {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+    <script type="text/javascript">
+      window.onload = function () {
+        // Check for a specific flash category if you want
+        {% for category, message in messages %}
+        if ("{{ category }}" === "error") {
+          alert("{{ message }}"); // Display the flash message as an alert
+        }
+        {% endfor %}
+      }
+    </script>
+    {% endif %}
+    {% endwith %}
+  </section>
+  </section>
 
   <!-- Copyright: @bootstrap -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 
 </body>
+
 </html>
