--- a/templates/index.html
+++ b/templates/index.html
@@ -12,9 +12,17 @@
     </style>
 </head>
 <body>
+    <h1>Welcome, {{ session['first_name'] }} {{ session['last_name'] }}!</h1>
+    <br>
     <h2>Create a Game Lobby</h2>
-    <input type="text" id="playerId" placeholder="Your Player ID">
+    <label for="lobbyLimit">Room limit:</label>
+    <select id="lobbyLimit">
+        {% for i in range(1, 11) %}
+        <option value="{{ i }}">{{ i }}</option>
+        {% endfor %}
+    </select>
     <button onclick="createLobby()">Create Lobby</button>
+
 
     <h2>Available Lobbies</h2>
     <div id="lobbies"></div>
