Update logo and slogan

--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Login Page</title>
+  <title>Funnect</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <style>
@@ -58,32 +58,12 @@
 </head>
 
 <body>
-  <!-- <div class="container">
-      <div class="content">
-        <h1 class="title">Log In</h1>
-        <div class="form-group">
-          <label class="form-label">Email</label>
-          <input type="email" class="form-input" placeholder="Email" />
-        </div>
-        <div class="form-group">
-          <label class="form-label">Password</label>
-          <input type="password" class="form-input" placeholder="Password" />
-        </div>
-        <button class="form-button">
-          <a href="/chat" style="text-decoration: none; color: white">Log In</a>
-        </button>
-        <p class="or-divider">- OR -</p>
-        <p class="signup-link">
-          Don't have an account? <a href="/signup">Sign Up</a>
-        </p>
-      </div>
-    </div> -->
   <section class="vh-100" style="background: #eaf7f8;">
     <div class="container-fluid h-custom">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-md-6 col-lg-5 col-xl-5 text-center">
           <!-- /static/images/legal_icon.png -->
-          <img src="/" class="img-fluid" alt="Sample image">
+          <img src="/static/imgs/logo.png" class="img-fluid" alt="Sample image">
         </div>
         <div class="col-md-8 col-lg-6 col-xl-4">
           <!-- Display flash messages -->
