--- a/templates/signup.html
+++ b/templates/signup.html
@@ -18,14 +18,11 @@
         <!-- Left Column for the offer -->
         <div class="col-md-6 text-center text-md-start">
           <h1 class="display-3 fw-bold" style="font-size: 50px;">
-            First Legal Aid<br />
-            <span class="text-primary">Bridging Convenience<br> and Law</span>
+            Funnect<br />
+            <span class="text-primary">Where Fun Meets<br>Connection</span>
           </h1>
           <p class="lead text-center" style="text-align: center;">
-            Find your way in the legal world with confidence. First Legal Aid offers instant access to guidance and
-            affordable legal solutions, tailored just for you. Navigate through life's legal challenges effortlessly,
-            knowing you have a trusted ally in your corner. With First Legal Aid, expert advice is always the first step
-            away.
+            Step into a world where joy and camaraderie reign supreme. Funnect is your gateway to boundless gaming adventures, seamlessly linking you with a global community eager to share in the thrill. Discover an oasis of entertainment that blends engaging multiplayer experiences with the warmth of friendship, all in real-time. With Funnect, every game is an opportunity to connect, celebrate, and create unforgettable memories. Here, having fun means staying connected.
           </p>
         </div>
 
@@ -74,7 +71,7 @@
                 <div class="form-check d-flex justify-content-center mb-4">
                   <input class="form-check-input me-2" type="checkbox" value="" id="form2Example33" checked />
                   <label class="form-check-label" for="form2Example33">
-                    Subscribe to Puberry
+                    Subscribe to Funnect
                   </label>
                 </div>
 
